--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Eldar Mujezinovic",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.10.0"
   },
   "devDependencies": {}
